fix vertical align input

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -3,16 +3,22 @@
   margin: 0 auto;
 }
 
+.input-container {
+  height: 55%;
+  display: flex;
+  align-items:end;
+}
+
 .calculator input[type="text"] {
+  border: none;
   font-size: 24px;
   padding: 10px;
   width: 100%;
-  height: 100%;
   box-sizing: border-box;
   text-align: end;
 }
 
-.buttons {
+.button-container {
   position:fixed;
   bottom: 0;
   right: 0;
